tests/files/type_checker_tests/should_pass/154.cmdr
//Test that add operation type checks
x = "hi" + "there";
