tests/files/type_checker_tests/should_fail/227.cmdr
//Should not string concatenate
x = 1.23;
x += "hi";